--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node --watch dist/index.js",
+    "start": "nodemon",
     "dev": "tsc --watch ",
     "build": "tsc "
   },
@@ -13,13 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
     "joi": "^17.9.2",
     "mongoose": "^7.4.4",
     "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/joi": "^17.2.3",
     "@types/mongoose": "^5.11.97",
