--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^11.10.1",
     "joi": "^17.9.2",
     "mongoose": "^7.4.4",
+    "nanoid": "^3.3.4",
     "uuid": "^9.0.1",
     "ws": "^8.13.0"
   },
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.17",
     "@types/joi": "^17.2.3",
     "@types/mongoose": "^5.11.97",
+    "@types/nanoid": "^3.0.0",
     "@types/node": "^20.5.3",
     "@types/uuid": "^9.0.3",
     "@types/ws": "^8.5.5",
