--- a/package.json
+++ b/package.json
@@ -15,19 +15,26 @@
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.3",
     "firebase-admin": "^11.10.1",
+    "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "mongoose": "^7.4.4",
+    "morgan": "^1.10.0",
     "nanoid": "^3.3.4",
     "uuid": "^9.0.1",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "@types/config": "^3.3.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/express-rate-limit": "^6.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/joi": "^17.2.3",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.7",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20.5.3",
     "@types/uuid": "^9.0.3",
