--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,5 +101,6 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "files": ["express.d.ts"]
 }
