--- a/tsconfig.json
+++ b/tsconfig.json
@@ -102,5 +102,5 @@
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"],
-  "files": ["express.d.ts"]
+  "files": ["express.d.ts", "websocket.d.ts"]
 }
