--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.1.3",
     "firebase-admin": "^11.10.1",
     "helmet": "^7.0.0",
